reuters, FordA, weather'

--- a/class/deep-learning-application/assignment/topic2/CNN(recurrence)-split_sequence_classification_diabetes(assignment).ipynb
+++ b/class/deep-learning-application/assignment/topic2/CNN(recurrence)-split_sequence_classification_diabetes(assignment).ipynb
@@ -2071,13 +2071,7 @@
       "\u001b[1m40/40\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 5ms/step - accuracy: 0.7700 - loss: 0.5186 - val_accuracy: 0.7143 - val_loss: 0.6087\n",
       "Epoch 100/120\n",
       "\u001b[1m40/40\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 5ms/step - accuracy: 0.7963 - loss: 0.4910 - val_accuracy: 0.7214 - val_loss: 0.6109\n",
-      "Epoch 101/120\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 101/120\n",
       "\u001b[1m40/40\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 4ms/step - accuracy: 0.8056 - loss: 0.4774 - val_accuracy: 0.7071 - val_loss: 0.6058\n",
       "Epoch 102/120\n",
       "\u001b[1m40/40\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 4ms/step - accuracy: 0.8132 - loss: 0.4703 - val_accuracy: 0.7143 - val_loss: 0.6090\n",
